# vasil-playground

./: cabal.project  hie.yaml  oracleToy.plutus  toy-oracle.sh  vplayg.cabal
src/: InlineDatum.hs
